# blacktrace

./: .dockerignore  .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  reorganize.sh
.archive/rust-legacy/: Cargo.toml  README.md
.archive/rust-legacy/docs/: 1-elevator_pitch.txt  3-architecture_overview.txt  4-impl_instructions.txt  IMPLEMENTATION_STATUS.md  MANUAL_TESTING.md  gitflow.txt
.archive/rust-legacy/src/crypto/: mod.rs
blacktrace-go/: .gitignore  Dockerfile  Dockerfile.test  README-DOCKER.md  README.md  REORGANIZATION_STATUS.md  TWO_NODE_DEMO_README.md  app.go  docker-compose.yml  go.mod  go.sum  main.go  network.go  start.sh  two_node_demo.sh  types.go
blacktrace-go/cmd/: auth.go  negotiate.go  node.go  order.go  query.go  root.go
blacktrace-go/config/: docker-compose.yml  zcash.conf
blacktrace-go/docs/: ARCHITECTURE.md  CLI_TESTING.md  DEMO_VIDEO_SCRIPT.md  PLATFORM_API_SUMMARY.md  SETTLEMENT_IMPLEMENTATION.md  TWO_NODE_DEMO.md
blacktrace-go/frontend/: Dockerfile  IMPLEMENTATION_STATUS.md  check-balances.mjs  check-htlc.mjs  deploy-htlc-direct.mjs  deploy-instance.mjs  dump-raw-abi.mjs  get-contract-address.mjs  package-lock.json  (+5 more)
blacktrace-go/settlement-service/: Cargo.toml  Dockerfile  go.mod  go.sum  main.go
blacktrace-go/settlement-service/src/: main.rs
blacktrace-go/settlement-service/starknet/: README.md  client.go  client_test.go  sncast.go
blacktrace-go/settlement-service/zcash/: client.go  htlc.go  transaction.go
cmd/: negotiate.go  order.go  query.go
config/: docker-compose.blockchains.yml  docker-compose.yml  zcash-regtest-tooling.md  zcash-regtest.conf
connectors/solana/htlc-contract/: Anchor.toml  Cargo.toml  README.md
connectors/solana/htlc-contract/src/: lib.rs
docs/: 1-elevator_pitch.txt  2-project_structure.txt  5-two-layer-htlc-design.txt  API.md  ARCHITECTURE.md  CHAIN_CONNECTORS.md  CLI_REFERENCE.md  DEMO_SCRIPT.md  DOCKER_QUICKSTART.md  DOCKER_SETUP.md  KEY_WORKFLOWS.md  MANUAL_TESTING.md  PHASE_2B_INTEGRATION_PLAN.md  PITCH.md  PROPOSAL_JS_SDK.md  QUICKSTART.md  README-DOCKER.md  SETTLEMENT.md  SETTLEMENT_IMPLEMENTATION.md  START_HERE.md
examples/: two_node_demo.rs
frontend/: check-alice-claim.mjs  check-claim-tx.mjs  check-deployed-contract.mjs  check-lock-tx.mjs  htlc-deployed-abi.json  inspect-strk-types.mjs  list-strk-functions.mjs  package-lock.json  query-htlc.mjs  test-approve-lock-flow.mjs  test-claim-direct.mjs
frontend-solana/: DEMO_WORKFLOW.md  IMPLEMENTATION_STATUS.md  check-balance.mjs  check-htlc-balance.mjs  check-strk-abi.mjs  check-tx.mjs  decode_htlc.cjs  deploy-htlc-with-transfers.mjs  deploy.mjs  frontend-rebuild-and-redeploy.sh  index.html  list-all-strk-functions.mjs  nginx.conf  package-lock.json  package.json  test-claim-raw.mjs  test-hash.mjs  test-starknet-hash.mjs  test-strk-transfer.mjs  tsconfig.app.json  vite.config.ts
scripts/: clear-proposals.sh  clear-users.sh  deploy-starknet-htlc.sh  fund-wallets.sh  rebuild-settlement.sh  show-htlc-tx.sh  start.sh  stop.sh  update-proposal-status.sh  zcash-explorer.sh
src/: error.rs  lib.rs  main.rs  types.rs
tests/: api-test-suite.sh  e2e-test.sh
(+129 files in other folders)
