[package]
name = "blacktrace"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
blake2 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# P2P Networking (will add libp2p next)
# Zcash integration (will add later)
# CLI (will add clap later)

[dev-dependencies]
tokio-test = "0.4"
