[package]
name = "blacktrace"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
blake2 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# P2P Networking (minimal TCP implementation)
tokio-util = { version = "0.7", features = ["codec"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Zcash integration (will add later)

[dev-dependencies]
tokio-test = "0.4"
