[package]
name = "blacktrace-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic primitives for BlackTrace protocol (Blake2b commitments, nullifiers)"

[lib]
name = "blacktrace_crypto"
crate-type = ["cdylib", "rlib"]  # cdylib for FFI/cgo, rlib for Rust tests

[dependencies]
# Cryptography only
blake2 = "0.10"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# Serialization (for types)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Zcash integration (will add later)

[dev-dependencies]
tokio-test = "0.4"
